--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>THIS IS A TRAINING WITH GP</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem fugit rem tempore aut vero tempora quibusdam, quisquam corporis consectetur totam!</p>
 </body>
 </html>
