--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>THIS IS A TRAINING WITH GP</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem fugit rem tempore aut vero tempora quibusdam, quisquam corporis consectetur totam!</p>
+    <h2>THIS IS A NEW LINE</h2>
 </body>
 </html>
